2nd-gen/packages/swc/components/badge/badge.css
/**
 * Copyright 2026 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

:host {
  display: inline-block;
  place-self: start;
  vertical-align: middle;
}

* {
  box-sizing: border-box;
}

.swc-Badge {
  --_swc-badge-border-width: token("border-width-200");
  --_swc-badge-border-width-deduction: calc(var(--_swc-badge-border-width) * 2);
  --_swc-badge-padding-block: token("component-top-to-text-100") token("component-bottom-to-text-100");

  display: inline-flex;
  gap: var(--swc-badge-gap, token("text-to-visual-100"));
  align-items: center;
  min-block-size: var(--swc-badge-height, token("component-height-100"));
  padding-block: calc(var(--swc-badge-padding-block, var(--_swc-badge-padding-block)) - var(--_swc-badge-border-width-deduction));
  padding-inline: calc(var(--swc-badge-padding-inline, token("component-edge-to-text-100")) - var(--_swc-badge-border-width-deduction));
  color: var(--swc-badge-label-icon-color, token("white"));
  background: var(--swc-badge-background-color, token("accent-background-color-default"));
  border: var(--_swc-badge-border-width) solid var(--swc-badge-border-color, transparent);
  border-radius: var(--swc-badge-corner-radius, token("corner-radius-medium-size-medium"));
  cursor: default;
}

.swc-Badge:has(.swc-Badge-icon) {
  --swc-badge-padding-inline: var(--swc-badge-with-icon-padding-inline, token("component-edge-to-visual-100"));
}

.swc-Badge-label {
  font-size: var(--swc-badge-font-size, token("font-size-100"));
  font-weight: token("medium-font-weight");
  line-height: var(--swc-badge-line-height, token("line-height-100"));

  &:lang(ja),
  &:lang(zh),
  &:lang(ko) {
    --swc-badge-line-height: token("cjk-line-height-100");
  }
}

.swc-Badge-icon {
  --_swc-badge-icon-size: token("workflow-icon-size-100");

  display: grid;
  flex-shrink: 0;
  place-content: center;
  inline-size: var(--swc-badge-icon-size, var(--_swc-badge-icon-size));
  block-size: var(--swc-badge-icon-size, var(--_swc-badge-icon-size));
}

:host([size="s"]) {
  --swc-badge-height: token("component-height-75");
  --swc-badge-corner-radius: token("corner-radius-medium-size-small");
  --swc-badge-gap: token("text-to-visual-75");
  --swc-badge-padding-inline: token("component-edge-to-text-75");
  --swc-badge-with-icon-padding-inline: token("component-edge-to-visual-75");
  --swc-badge-padding-block: token("component-top-to-text-75") token("component-bottom-to-text-75");
  --swc-badge-font-size: token("font-size-75");
  --swc-badge-icon-size: token("workflow-icon-size-75");
}

:host([size="l"]) {
  --swc-badge-height: token("component-height-200");
  --swc-badge-corner-radius: token("corner-radius-medium-size-large");
  --swc-badge-gap: token("text-to-visual-200");
  --swc-badge-padding-inline: token("component-edge-to-text-200");
  --swc-badge-with-icon-padding-inline: token("component-edge-to-visual-200");
  --swc-badge-padding-block: token("component-top-to-text-200") token("component-bottom-to-text-200");
  --swc-badge-font-size: token("font-size-200");
  --swc-badge-icon-size: token("workflow-icon-size-200");
}

:host([size="xl"]) {
  --swc-badge-height: token("component-height-300");
  --swc-badge-corner-radius: token("corner-radius-medium-size-extra-large");
  --swc-badge-gap: token("text-to-visual-300");
  --swc-badge-padding-inline: token("component-edge-to-text-300");
  --swc-badge-with-icon-padding-inline: token("component-edge-to-visual-300");
  --swc-badge-padding-block: token("component-top-to-text-300") token("component-bottom-to-text-300");
  --swc-badge-font-size: token("font-size-300");
  --swc-badge-icon-size: token("workflow-icon-size-300");
}

.swc-Badge--fixed-inline-start {
  border-start-start-radius: 0;
  border-end-start-radius: 0;
}

.swc-Badge--fixed-inline-end {
  border-start-end-radius: 0;
  border-end-end-radius: 0;
}

.swc-Badge--fixed-block-start {
  border-start-start-radius: 0;
  border-start-end-radius: 0;
}

.swc-Badge--fixed-block-end {
  border-end-start-radius: 0;
  border-end-end-radius: 0;
}

:host([variant="notice"]),
:host([variant="celery"]),
:host([variant="chartreuse"]),
:host([variant="orange"]),
:host([variant="yellow"]) {
  --swc-badge-label-icon-color: token("black");
}

/* NOTE: `accent` is the default color */

:host([variant="neutral"]) {
  --swc-badge-background-color: token("neutral-subdued-background-color-default");
}

:host([variant="informative"]) {
  --swc-badge-background-color: token("informative-background-color-default");
}

:host([variant="negative"]) {
  --swc-badge-background-color: token("negative-background-color-default");
}

:host([variant="positive"]) {
  --swc-badge-background-color: token("positive-background-color-default");
}

:host([variant="notice"]) {
  --swc-badge-background-color: token("notice-background-color-default");
}

.swc-Badge--gray {
  --swc-badge-background-color: token("gray-background-color-default");
}

.swc-Badge--red {
  --swc-badge-background-color: token("red-background-color-default");
}

.swc-Badge--orange {
  --swc-badge-background-color: token("orange-background-color-default");
}

.swc-Badge--yellow {
  --swc-badge-background-color: token("yellow-background-color-default");
}

.swc-Badge--chartreuse {
  --swc-badge-background-color: token("chartreuse-background-color-default");
}

.swc-Badge--celery {
  --swc-badge-background-color: token("celery-background-color-default");
}

.swc-Badge--green {
  --swc-badge-background-color: token("green-background-color-default");
}

.swc-Badge--seafoam {
  --swc-badge-background-color: token("seafoam-background-color-default");
}

.swc-Badge--cyan {
  --swc-badge-background-color: token("cyan-background-color-default");
}

.swc-Badge--blue {
  --swc-badge-background-color: token("blue-background-color-default");
}

.swc-Badge--indigo {
  --swc-badge-background-color: token("indigo-background-color-default");
}

.swc-Badge--purple {
  --swc-badge-background-color: token("purple-background-color-default");
}

.swc-Badge--fuchsia {
  --swc-badge-background-color: token("fuchsia-background-color-default");
}

.swc-Badge--magenta {
  --swc-badge-background-color: token("magenta-background-color-default");
}

.swc-Badge--pink {
  --swc-badge-background-color: token("pink-background-color-default");
}

.swc-Badge--turquoise {
  --swc-badge-background-color: token("turquoise-background-color-default");
}

.swc-Badge--brown {
  --swc-badge-background-color: token("brown-background-color-default");
}

.swc-Badge--cinnamon {
  --swc-badge-background-color: token("cinnamon-background-color-default");
}

.swc-Badge--silver {
  --swc-badge-background-color: token("silver-background-color-default");
}

:host([subtle]) {
  --swc-badge-label-icon-color: token("gray-1000");
}

:host([subtle][variant="neutral"]) {
  --swc-badge-background-color: token("neutral-subtle-background-color-default");
}

:host([subtle][variant="accent"]) {
  --swc-badge-background-color: token("accent-subtle-background-color-default");
}

:host([subtle][variant="informative"]) {
  --swc-badge-background-color: token("informative-subtle-background-color-default");
}

:host([subtle][variant="negative"]) {
  --swc-badge-background-color: token("negative-subtle-background-color-default");
}

:host([subtle][variant="positive"]) {
  --swc-badge-background-color: token("positive-subtle-background-color-default");
}

:host([subtle][variant="notice"]) {
  --swc-badge-background-color: token("notice-subtle-background-color-default");
}

.swc-Badge--subtle {
  &:where(.swc-Badge--gray) {
    --swc-badge-background-color: token("gray-subtle-background-color-default");
  }

  &:where(.swc-Badge--red) {
    --swc-badge-background-color: token("red-subtle-background-color-default");
  }

  &:where(.swc-Badge--orange) {
    --swc-badge-background-color: token("orange-subtle-background-color-default");
  }

  &:where(.swc-Badge--yellow) {
    --swc-badge-background-color: token("yellow-subtle-background-color-default");
  }

  &:where(.swc-Badge--chartreuse) {
    --swc-badge-background-color: token("chartreuse-subtle-background-color-default");
  }

  &:where(.swc-Badge--celery) {
    --swc-badge-background-color: token("celery-subtle-background-color-default");
  }

  &:where(.swc-Badge--green) {
    --swc-badge-background-color: token("green-subtle-background-color-default");
  }

  &:where(.swc-Badge--seafoam) {
    --swc-badge-background-color: token("seafoam-subtle-background-color-default");
  }

  &:where(.swc-Badge--cyan) {
    --swc-badge-background-color: token("cyan-subtle-background-color-default");
  }

  &:where(.swc-Badge--blue) {
    --swc-badge-background-color: token("blue-subtle-background-color-default");
  }

  &:where(.swc-Badge--indigo) {
    --swc-badge-background-color: token("indigo-subtle-background-color-default");
  }

  &:where(.swc-Badge--purple) {
    --swc-badge-background-color: token("purple-subtle-background-color-default");
  }

  &:where(.swc-Badge--fuchsia) {
    --swc-badge-background-color: token("fuchsia-subtle-background-color-default");
  }

  &:where(.swc-Badge--magenta) {
    --swc-badge-background-color: token("magenta-subtle-background-color-default");
  }

  &:where(.swc-Badge--pink) {
    --swc-badge-background-color: token("pink-subtle-background-color-default");
  }

  &:where(.swc-Badge--turquoise) {
    --swc-badge-background-color: token("turquoise-subtle-background-color-default");
  }

  &:where(.swc-Badge--brown) {
    --swc-badge-background-color: token("brown-subtle-background-color-default");
  }

  &:where(.swc-Badge--cinnamon) {
    --swc-badge-background-color: token("cinnamon-subtle-background-color-default");
  }

  &:where(.swc-Badge--silver) {
    --swc-badge-background-color: token("silver-subtle-background-color-default");
  }
}

:host([outline][variant="neutral"]),
:host([outline][variant="accent"]),
:host([outline][variant="informative"]),
:host([outline][variant="negative"]),
:host([outline][variant="positive"]),
:host([outline][variant="notice"]) {
  --swc-badge-background-color: var(--swc-badge-outline-background-color, token("background-layer-2-color"));
  --swc-badge-label-icon-color: var(--swc-badge-outline-label-icon-color, token("gray-1000"));
}

:host([outline][variant="neutral"]) {
  --swc-badge-border-color: token("neutral-visual-color");
}

:host([outline][variant="accent"]) {
  --swc-badge-border-color: token("accent-visual-color");
}

:host([outline][variant="informative"]) {
  --swc-badge-border-color: token("informative-visual-color");
}

:host([outline][variant="negative"]) {
  --swc-badge-border-color: token("negative-visual-color");
}

:host([outline][variant="positive"]) {
  --swc-badge-border-color: token("positive-visual-color");
}

:host([outline][variant="notice"]) {
  --swc-badge-border-color: token("notice-visual-color");
}

